<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    待修改，可能会添加一个TextView，用来显示乐曲名-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/view_name"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/view_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="null"/>

    </LinearLayout>

    <!--    待修改，可能会添加播放时长，以及总时长。-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <SeekBar
            android:id="@+id/seek_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"/>

        <TextView
            android:id="@+id/view_now_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="0:00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="/"/>

        <TextView
            android:id="@+id/view_total_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="0:00"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_save"/>

        <Button
            android:id="@+id/btn_before"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_before"/>

        <Button
            android:id="@+id/btn_start_pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_start"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_next"/>

        <Button
            android:id="@+id/btn_random"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_random"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/list_item_music_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
    </FrameLayout>

<!--    <Button-->
<!--        android:id="@+id/btn_add"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/btn_add_item"/>-->

<!--    <Button-->
<!--        android:id="@+id/btn_create"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/btn_create"/>-->

</LinearLayout>